Removing unncessary comments and adding cursor pointer to the clock.

--- a/wiki.css
+++ b/wiki.css
@@ -65,6 +65,7 @@
 
 .clock-pomodoro{
   border: 1px solid white;
+  cursor:pointer;
   /*margin-top: 10%;*/
   /* padding-top: 10%; */
   border-radius: 250px;
